; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_col2im.c_col2im_add_pixel.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_col2im.c_col2im_add_pixel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @col2im_add_pixel(float* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, float %8) #0 {
  %10 = alloca float*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca float, align 4
  store float* %0, float** %10, align 8
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store float %8, float* %18, align 4
  %19 = load i32, i32* %17, align 4
  %20 = load i32, i32* %14, align 4
  %21 = sub nsw i32 %20, %19
  store i32 %21, i32* %14, align 4
  %22 = load i32, i32* %17, align 4
  %23 = load i32, i32* %15, align 4
  %24 = sub nsw i32 %23, %22
  store i32 %24, i32* %15, align 4
  %25 = load i32, i32* %14, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %38, label %27

27:                                               ; preds = %9
  %28 = load i32, i32* %15, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %38, label %30

30:                                               ; preds = %27
  %31 = load i32, i32* %14, align 4
  %32 = load i32, i32* %11, align 4
  %33 = icmp sge i32 %31, %32
  br i1 %33, label %38, label %34

34:                                               ; preds = %30
  %35 = load i32, i32* %15, align 4
  %36 = load i32, i32* %12, align 4
  %37 = icmp sge i32 %35, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %34, %30, %27, %9
  br label %55

39:                                               ; preds = %34
  %40 = load float, float* %18, align 4
  %41 = load float*, float** %10, align 8
  %42 = load i32, i32* %15, align 4
  %43 = load i32, i32* %12, align 4
  %44 = load i32, i32* %14, align 4
  %45 = load i32, i32* %11, align 4
  %46 = load i32, i32* %16, align 4
  %47 = mul nsw i32 %45, %46
  %48 = add nsw i32 %44, %47
  %49 = mul nsw i32 %43, %48
  %50 = add nsw i32 %42, %49
  %51 = sext i32 %50 to i64
  %52 = getelementptr inbounds float, float* %41, i64 %51
  %53 = load float, float* %52, align 4
  %54 = fadd float %53, %40
  store float %54, float* %52, align 4
  br label %55

55:                                               ; preds = %39, %38
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
